<resources>
    <string name="app_name">Aims</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="selected_item">Selected item:</string>
    <string name="text_login">Log In</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_do_not_acc">Don\'t have an account?</string>
    <string name="text_create_sign_up">Sign Up</string>
    <string name="text_create_acc">Create Account</string>
    <string name="text_already_acc">Already have an account?</string>
    <string name="text_back_to_login">Log in</string>
    <string name="text_hello">Hello sir Welcome</string>


    <string-array name="Languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Swift</item>
        <item>Python</item>
        <item>c</item>
        <item>c++</item>
    </string-array>
    <string name="title_activity_frist">FristActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_login_activityasdfghjkl">LoginActivityasdfghjkl</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_map">Default</string>
    <string name="satellite_map">Satellite</string>
    <string name="terrain_map">Terrain</string>
    <string name="hybrid_map">hybrid</string>
    <string name="map_setting">setting</string>
    <string name="hide_pointer">hide pointer</string>
    <string name="hide_current">"hide current "</string>
    <string name="hide_zoom">hide zoom</string>
    <string name="textview_brand">Brand :</string>
    <string name="textview_description">Description :</string>
    <string name="textview_price">Price :</string>
    <string name="textview_discount_percentage">DiscountPercentage :</string>
    <string name="textview_rating">Rating :</string>
    <string name="textview_stock">Stock :</string>
    <string name="textview_category">Category :</string>
    <string name="maps">Maps</string>
    <string name="textview_name">Name :</string>
    <string name="title_activity_home_page">HomePageActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit">edit</string>
    <string name="todo">TODO</string>
    <string name="submit">Submit</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="search_here">Search here</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>


</resources>