<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mvcLiveData.EditScreenFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/enter_your_name"
            android:background="@drawable/shapes_login"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp" />

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:textSize="20sp"
            android:hint="@string/enter_your_email"
            android:background="@drawable/shapes_login"
            app:layout_constraintTop_toBottomOf="@+id/edittext_name"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/edittext_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:textSize="20sp"
            android:hint="@string/enter_your_address"
            android:background="@drawable/shapes_login"
            app:layout_constraintTop_toBottomOf="@+id/edittext_email"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/edittext_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:textSize="20sp"
            android:hint="@string/enter_your_mobile_number"
            android:background="@drawable/shapes_login"
            app:layout_constraintTop_toBottomOf="@+id/edittext_add"
            android:layout_marginTop="20dp" />

        <ImageView
            android:id="@+id/imageview_edit_data"
            android:layout_width="100dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/edittext_mobile_number"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_form_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="35dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/edittext_find_data"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_here"
            android:background="@drawable/shapes_login"
            app:layout_constraintTop_toTopOf="@+id/imageview_edit_data"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="35dp" />

        <Button
            android:id="@+id/button_submit_update_data"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="20sp"
            android:backgroundTint="@color/lite_blue"
            app:layout_constraintBottom_toBottomOf="@+id/imageview_edit_data"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="35dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>