<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
            <variable
                name="myvar"
                type="com.example.myapplication.mvcLiveData.HomeScreenLiveDataFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mvcLiveData.HomeScreenLiveDataFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/textview_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/name"
            android:background="@drawable/shapes_login"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp" />

        <TextView
            android:id="@+id/textview_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:textSize="20sp"
            android:hint="@string/email"
            android:background="@drawable/shapes_login"
            app:layout_constraintTop_toBottomOf="@+id/textview_name"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/textview_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:textSize="20sp"
            android:hint="@string/address"
            android:background="@drawable/shapes_login"
            app:layout_constraintTop_toBottomOf="@+id/textview_email"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/textview_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:textSize="20sp"
            android:hint="@string/mobile_number"
            android:background="@drawable/shapes_login"
            app:layout_constraintTop_toBottomOf="@+id/textview_add"
            android:layout_marginTop="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_news"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:background="@drawable/shapes_login"
            app:layout_constraintTop_toBottomOf="@+id/textview_mobile_number"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="35dp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/textview_mobile_number"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_form_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="35dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="20sp"
            android:backgroundTint="@color/lite_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>