<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DemoProject.FirstScreenActivity">

    <TextView
        android:id="@+id/textview_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_login"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"/>
    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="@dimen/edittext_horizontal"
        android:inputType="textEmailAddress"
        android:hint="@string/text_email"
        android:textColor="@color/black"
        android:background="@drawable/shapes_login"
        app:layout_constraintTop_toBottomOf="@+id/textview_login"/>
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        app:layout_constraintTop_toBottomOf="@+id/edittext_email"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="@dimen/edittext_horizontal"
        android:inputType="textPassword"
        android:hint="@string/text_password"
        android:textColor="@color/black"
        android:background="@drawable/shapes_login"/>
    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginHorizontal="30dp"
        android:text="log in"
        android:backgroundTint="@color/lite_blue"
        app:layout_constraintTop_toBottomOf="@+id/edittext_password"
        android:layout_marginTop="50dp"/>


    <TextView
        android:id="@+id/textview_create_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_do_not_acc"
        android:textSize="@dimen/textview_size"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintHorizontal_bias=".4"
        app:layout_constraintStart_toStartOf="@id/button_login"
        app:layout_constraintEnd_toEndOf="@id/button_login"
        android:layout_marginTop="50dp" />
    <TextView
        android:id="@+id/textview_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_create_sign_up"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/textview_size"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintStart_toEndOf="@+id/textview_create_acc"
        android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>