<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".json.retrofit.ShowProductDataActivity">

    <Button
        android:id="@+id/button_back"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/ic_back"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/textview_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name : "
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/textview_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_name"
        android:layout_marginTop="80dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/textview_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_description"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_product_name"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/textview_product_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_product_name"
        app:layout_constraintStart_toEndOf="@+id/textview_description"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/textview_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_price"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_product_description"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/textview_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textview_product_description"
        app:layout_constraintStart_toEndOf="@+id/textview_price"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/textview_discount_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_discountpercentage"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_product_price"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/textview_product_discountPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textview_product_price"
        app:layout_constraintStart_toEndOf="@+id/textview_discount_percentage"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/textview_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_rating"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_product_discountPercentage"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/textview_product_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textview_product_discountPercentage"
        app:layout_constraintStart_toEndOf="@+id/textview_rating"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/textview_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_stock"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_product_rating"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/textview_product_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textview_product_rating"
        app:layout_constraintStart_toEndOf="@+id/textview_stock"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/textview_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_brand"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_product_stock"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/textview_product_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textview_product_stock"
        app:layout_constraintStart_toEndOf="@+id/textview_brand"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/textview_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_category"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_product_brand"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/textview_product_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textview_product_brand"
        app:layout_constraintStart_toEndOf="@+id/textview_category"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPage_product"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_product_category"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>